// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyze returns a list of errors for a file with a missing node 1`] = `
Array [
  Object {
    "message": "Syntax error: expected \\"fi\\" somewhere in the file",
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 12,
      },
      "start": Object {
        "character": 0,
        "line": 12,
      },
    },
    "severity": 2,
  },
]
`;

exports[`analyze returns a list of errors for a file with parsing errors 1`] = `
Array [
  Object {
    "message": "Failed to parse expression",
    "range": Object {
      "end": Object {
        "character": 1,
        "line": 9,
      },
      "start": Object {
        "character": 0,
        "line": 2,
      },
    },
    "severity": 1,
  },
]
`;

exports[`findDefinition returns a list of locations if parameter is found 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 37,
        "line": 148,
      },
      "start": Object {
        "character": 0,
        "line": 148,
      },
    },
    "uri": "dummy-uri.sh",
  },
]
`;

exports[`findReferences returns a list of locations if parameter is found 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 12,
        "line": 148,
      },
      "start": Object {
        "character": 0,
        "line": 148,
      },
    },
    "uri": "dummy-uri.sh",
  },
  Object {
    "range": Object {
      "end": Object {
        "character": 12,
        "line": 148,
      },
      "start": Object {
        "character": 0,
        "line": 148,
      },
    },
    "uri": "dummy-uri.sh",
  },
  Object {
    "range": Object {
      "end": Object {
        "character": 45,
        "line": 152,
      },
      "start": Object {
        "character": 33,
        "line": 152,
      },
    },
    "uri": "dummy-uri.sh",
  },
  Object {
    "range": Object {
      "end": Object {
        "character": 20,
        "line": 162,
      },
      "start": Object {
        "character": 8,
        "line": 162,
      },
    },
    "uri": "dummy-uri.sh",
  },
  Object {
    "range": Object {
      "end": Object {
        "character": 31,
        "line": 165,
      },
      "start": Object {
        "character": 19,
        "line": 165,
      },
    },
    "uri": "dummy-uri.sh",
  },
]
`;

exports[`findSymbolCompletions return a list of symbols 1`] = `
Array [
  Object {
    "data": Object {
      "name": "ret",
      "type": "function",
    },
    "kind": 6,
    "label": "ret",
  },
  Object {
    "data": Object {
      "name": "configures",
      "type": "function",
    },
    "kind": 6,
    "label": "configures",
  },
  Object {
    "data": Object {
      "name": "npm_config_loglevel",
      "type": "function",
    },
    "kind": 6,
    "label": "npm_config_loglevel",
  },
  Object {
    "data": Object {
      "name": "node",
      "type": "function",
    },
    "kind": 6,
    "label": "node",
  },
  Object {
    "data": Object {
      "name": "TMP",
      "type": "function",
    },
    "kind": 6,
    "label": "TMP",
  },
  Object {
    "data": Object {
      "name": "BACK",
      "type": "function",
    },
    "kind": 6,
    "label": "BACK",
  },
  Object {
    "data": Object {
      "name": "tar",
      "type": "function",
    },
    "kind": 6,
    "label": "tar",
  },
  Object {
    "data": Object {
      "name": "MAKE",
      "type": "function",
    },
    "kind": 6,
    "label": "MAKE",
  },
  Object {
    "data": Object {
      "name": "make",
      "type": "function",
    },
    "kind": 6,
    "label": "make",
  },
  Object {
    "data": Object {
      "name": "clean",
      "type": "function",
    },
    "kind": 6,
    "label": "clean",
  },
  Object {
    "data": Object {
      "name": "node_version",
      "type": "function",
    },
    "kind": 6,
    "label": "node_version",
  },
  Object {
    "data": Object {
      "name": "t",
      "type": "function",
    },
    "kind": 6,
    "label": "t",
  },
  Object {
    "data": Object {
      "name": "url",
      "type": "function",
    },
    "kind": 6,
    "label": "url",
  },
  Object {
    "data": Object {
      "name": "ver",
      "type": "function",
    },
    "kind": 6,
    "label": "ver",
  },
  Object {
    "data": Object {
      "name": "isnpm10",
      "type": "function",
    },
    "kind": 6,
    "label": "isnpm10",
  },
  Object {
    "data": Object {
      "name": "NODE",
      "type": "function",
    },
    "kind": 6,
    "label": "NODE",
  },
]
`;

exports[`findSymbols issue 101 1`] = `
Array [
  Object {
    "kind": 12,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 1,
          "line": 14,
        },
        "start": Object {
          "character": 0,
          "line": 3,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "add_a_user",
  },
  Object {
    "containerName": "add_a_user",
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 9,
          "line": 5,
        },
        "start": Object {
          "character": 2,
          "line": 5,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "USER",
  },
  Object {
    "containerName": "add_a_user",
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 13,
          "line": 6,
        },
        "start": Object {
          "character": 2,
          "line": 6,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "PASSWORD",
  },
  Object {
    "containerName": "add_a_user",
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 13,
          "line": 9,
        },
        "start": Object {
          "character": 2,
          "line": 9,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "COMMENTS",
  },
]
`;

exports[`findSymbols returns a list of SymbolInformation if uri is found 1`] = `
Array [
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 8,
          "line": 21,
        },
        "start": Object {
          "character": 2,
          "line": 21,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 8,
          "line": 30,
        },
        "start": Object {
          "character": 2,
          "line": 30,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 6,
          "line": 54,
        },
        "start": Object {
          "character": 0,
          "line": 54,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 5,
          "line": 83,
        },
        "start": Object {
          "character": 0,
          "line": 83,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 8,
          "line": 90,
        },
        "start": Object {
          "character": 2,
          "line": 90,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 8,
          "line": 97,
        },
        "start": Object {
          "character": 2,
          "line": 97,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 6,
          "line": 149,
        },
        "start": Object {
          "character": 0,
          "line": 149,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 6,
          "line": 181,
        },
        "start": Object {
          "character": 0,
          "line": 181,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 9,
          "line": 183,
        },
        "start": Object {
          "character": 2,
          "line": 183,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 8,
          "line": 188,
        },
        "start": Object {
          "character": 2,
          "line": 188,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 11,
          "line": 190,
        },
        "start": Object {
          "character": 4,
          "line": 190,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 11,
          "line": 220,
        },
        "start": Object {
          "character": 6,
          "line": 220,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 15,
          "line": 230,
        },
        "start": Object {
          "character": 10,
          "line": 230,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 16,
          "line": 233,
        },
        "start": Object {
          "character": 10,
          "line": 233,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 16,
          "line": 236,
        },
        "start": Object {
          "character": 10,
          "line": 236,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 6,
          "line": 265,
        },
        "start": Object {
          "character": 0,
          "line": 265,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 68,
          "line": 38,
        },
        "start": Object {
          "character": 0,
          "line": 38,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "configures",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 27,
          "line": 40,
        },
        "start": Object {
          "character": 0,
          "line": 40,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "npm_config_loglevel",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 31,
          "line": 48,
        },
        "start": Object {
          "character": 2,
          "line": 48,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "npm_config_loglevel",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 22,
          "line": 53,
        },
        "start": Object {
          "character": 0,
          "line": 53,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "node",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 15,
          "line": 69,
        },
        "start": Object {
          "character": 0,
          "line": 69,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "TMP",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 12,
          "line": 71,
        },
        "start": Object {
          "character": 2,
          "line": 71,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "TMP",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 19,
          "line": 73,
        },
        "start": Object {
          "character": 0,
          "line": 73,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "TMP",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 11,
          "line": 81,
        },
        "start": Object {
          "character": 0,
          "line": 81,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "BACK",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 12,
          "line": 84,
        },
        "start": Object {
          "character": 0,
          "line": 84,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "tar",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 25,
          "line": 86,
        },
        "start": Object {
          "character": 2,
          "line": 86,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "tar",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 22,
          "line": 89,
        },
        "start": Object {
          "character": 2,
          "line": 89,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "tar",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 11,
          "line": 116,
        },
        "start": Object {
          "character": 0,
          "line": 116,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "MAKE",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 25,
          "line": 119,
        },
        "start": Object {
          "character": 2,
          "line": 119,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "make",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 26,
          "line": 123,
        },
        "start": Object {
          "character": 4,
          "line": 123,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "make",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 17,
          "line": 127,
        },
        "start": Object {
          "character": 6,
          "line": 127,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "make",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 14,
          "line": 131,
        },
        "start": Object {
          "character": 2,
          "line": 131,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "make",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 13,
          "line": 138,
        },
        "start": Object {
          "character": 2,
          "line": 138,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "make",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 21,
          "line": 255,
        },
        "start": Object {
          "character": 8,
          "line": 255,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "make",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 12,
          "line": 145,
        },
        "start": Object {
          "character": 2,
          "line": 145,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "clean",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 18,
          "line": 225,
        },
        "start": Object {
          "character": 10,
          "line": 225,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "clean",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 37,
          "line": 148,
        },
        "start": Object {
          "character": 0,
          "line": 148,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "node_version",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 18,
          "line": 158,
        },
        "start": Object {
          "character": 0,
          "line": 158,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "t",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 16,
          "line": 170,
        },
        "start": Object {
          "character": 6,
          "line": 170,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "t",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 25,
          "line": 179,
        },
        "start": Object {
          "character": 0,
          "line": 177,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "url",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 24,
          "line": 187,
        },
        "start": Object {
          "character": 2,
          "line": 185,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "url",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 65,
          "line": 205,
        },
        "start": Object {
          "character": 6,
          "line": 205,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ver",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 15,
          "line": 206,
        },
        "start": Object {
          "character": 6,
          "line": 206,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "isnpm10",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 21,
          "line": 211,
        },
        "start": Object {
          "character": 12,
          "line": 211,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "isnpm10",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 21,
          "line": 215,
        },
        "start": Object {
          "character": 12,
          "line": 215,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "isnpm10",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 22,
          "line": 232,
        },
        "start": Object {
          "character": 10,
          "line": 232,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "NODE",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 22,
          "line": 235,
        },
        "start": Object {
          "character": 10,
          "line": 235,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "NODE",
  },
]
`;
